# better-recipes

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python_code_quality.yml
app/: main.py
app/core/: constants.py  embeddings.py  ingredients.py  units.py
app/models/: schemas.py
