[tool.poetry]
name = "recipeapp"
version = "0.1.0"
description = "A better way to organize recipes in a bussy day to day live"
authors = ["Robin, Cleo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
Flask = "^3.0.3"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
openai = "^1.35.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
